Add html template for the counter, and the channel to exchange the value

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -34,3 +34,6 @@
     </ul>
   </div>
 </div>
+
+<button id="increment" class="btn btn-primary" type="button">+1</button>
+<div id="counter">0</div>
